--- a/ClothesShop/Reports/Sheet.rdlc
+++ b/ClothesShop/Reports/Sheet.rdlc
@@ -458,7 +458,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>01011708963 - 01157798664 - 01020149447</Value>
+                <Value>01119968662-01119968663</Value>
                 <Style />
               </TextRun>
             </TextRuns>
@@ -473,75 +473,6 @@
         <Height>0.6cm</Height>
         <Width>9.85897cm</Width>
         <ZIndex>13</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <VerticalAlign>Middle</VerticalAlign>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Textbox Name="Textbox17">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>: أرضى</Value>
-                <Style>
-                  <FontSize>12pt</FontSize>
-                  <FontWeight>Bold</FontWeight>
-                </Style>
-              </TextRun>
-            </TextRuns>
-            <Style>
-              <TextAlign>Right</TextAlign>
-            </Style>
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox3</rd:DefaultName>
-        <Top>3.76428cm</Top>
-        <Left>17.87698cm</Left>
-        <Height>0.6cm</Height>
-        <Width>1.33583cm</Width>
-        <ZIndex>14</ZIndex>
-        <Style>
-          <Border>
-            <Style>None</Style>
-          </Border>
-          <VerticalAlign>Middle</VerticalAlign>
-          <PaddingLeft>2pt</PaddingLeft>
-          <PaddingRight>2pt</PaddingRight>
-          <PaddingTop>2pt</PaddingTop>
-          <PaddingBottom>2pt</PaddingBottom>
-        </Style>
-      </Textbox>
-      <Textbox Name="Textbox18">
-        <CanGrow>true</CanGrow>
-        <KeepTogether>true</KeepTogether>
-        <Paragraphs>
-          <Paragraph>
-            <TextRuns>
-              <TextRun>
-                <Value>02-33039201</Value>
-                <Style />
-              </TextRun>
-            </TextRuns>
-            <Style>
-              <TextAlign>Right</TextAlign>
-            </Style>
-          </Paragraph>
-        </Paragraphs>
-        <rd:DefaultName>Textbox3</rd:DefaultName>
-        <Top>3.76428cm</Top>
-        <Left>15.00656cm</Left>
-        <Height>0.6cm</Height>
-        <Width>2.83867cm</Width>
-        <ZIndex>15</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
@@ -1169,11 +1100,11 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>DeliveryDetailsDataSet</DataSetName>
-        <Top>4.79467cm</Top>
+        <Top>4.15967cm</Top>
         <Left>0.88624cm</Left>
         <Height>1.8cm</Height>
         <Width>18.36185cm</Width>
-        <ZIndex>16</ZIndex>
+        <ZIndex>14</ZIndex>
         <Style>
           <Border>
             <Style>None</Style>
