--- a/ClothesShop/Reports/Sheet.rdlc
+++ b/ClothesShop/Reports/Sheet.rdlc
@@ -488,10 +488,13 @@
         <TablixBody>
           <TablixColumns>
             <TablixColumn>
-              <Width>2.5cm</Width>
+              <Width>2.44974cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>4.08277cm</Width>
+              <Width>1.97947cm</Width>
+            </TablixColumn>
+            <TablixColumn>
+              <Width>3.30666cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.70625cm</Width>
@@ -516,6 +519,42 @@
             <TablixRow>
               <Height>1.2cm</Height>
               <TablixCells>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox18">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>تاريخ الطلب</Value>
+                              <Style>
+                                <FontSize>12pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Center</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox18</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <VerticalAlign>Middle</VerticalAlign>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
                 <TablixCell>
                   <CellContents>
                     <Textbox Name="Textbox41">
@@ -811,6 +850,39 @@
               <TablixCells>
                 <TablixCell>
                   <CellContents>
+                    <Textbox Name="RequestDate">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>=Fields!RequestDate.Value</Value>
+                              <Style />
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Right</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>RequestDate</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <VerticalAlign>Middle</VerticalAlign>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell>
+                  <CellContents>
                     <Textbox Name="SellerName">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
@@ -1084,6 +1156,7 @@
             <TablixMember />
             <TablixMember />
             <TablixMember />
+            <TablixMember />
           </TablixMembers>
         </TablixColumnHierarchy>
         <TablixRowHierarchy>
@@ -1101,9 +1174,9 @@
         </TablixRowHierarchy>
         <DataSetName>DeliveryDetailsDataSet</DataSetName>
         <Top>4.15967cm</Top>
-        <Left>0.88624cm</Left>
+        <Left>0.41275cm</Left>
         <Height>1.8cm</Height>
-        <Width>18.36185cm</Width>
+        <Width>19.51495cm</Width>
         <ZIndex>14</ZIndex>
         <Style>
           <Border>
@@ -1115,7 +1188,7 @@
     <Height>7.10267cm</Height>
     <Style />
   </Body>
-  <Width>20.64976cm</Width>
+  <Width>20.66859cm</Width>
   <Page>
     <PageHeader>
       <Height>1.74553cm</Height>
@@ -1247,6 +1320,10 @@
         </Field>
         <Field Name="CustomerMobileNumber">
           <DataField>CustomerMobileNumber</DataField>
+          <rd:TypeName>System.String</rd:TypeName>
+        </Field>
+        <Field Name="RequestDate">
+          <DataField>RequestDate</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
