--- a/ClothesShop/Views/Statistics/Monthly.cshtml
+++ b/ClothesShop/Views/Statistics/Monthly.cshtml
@@ -26,6 +26,21 @@
             </a>
         </div>
     </div>
+    <div class="col-md-1 mb-3 d-inline-block">
+        <div class="col-md-12">
+            <a href="#" id="preMonthBtn" type="button" class="btn btn-lg btn-primary">
+                <i class="dx dx-icon-arrowright"></i> @Resources.Previous
+            </a>
+        </div>
+    </div>
+
+    <div class="col-md-1 mb-3 d-inline-block">
+        <div class="col-md-12">
+            <a href="#" id="nextMonthBtn" type="button" class="btn btn-lg btn-primary">
+                @Resources.Next <i class="dx dx-icon-arrowleft"></i>
+            </a>
+        </div>
+    </div>
 
     <div class="col-sm-12 col-md-4">
         <div class="card">
